<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rviz_ogre_vendor</name>
  <version>13.3.1</version>
  <description>
    Wrapper around ogre3d, it provides a fixed CMake module and an ExternalProject build of ogre.
  </description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>

  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>MIT</license>  <!-- ogre is MIT (https://www.ogre3d.org/licensing) -->

  <url type="website">https://www.ogre3d.org/</url>

  <author email="jacob@openrobotics.org">Jacob Perron</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>
  <author email="william@openrobotics.org">William Woodall</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <build_depend>libfreetype6-dev</build_depend>
  <build_export_depend>libfreetype6-dev</build_export_depend>
  <exec_depend>libfreetype6</exec_depend>

  <depend>libx11-dev</depend>
  <depend>libxaw</depend>
  <depend>libxrandr</depend>
  <depend>opengl</depend>

  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
